--- a/src/main/webapp/Aftaler.html
+++ b/src/main/webapp/Aftaler.html
@@ -5,7 +5,9 @@
 <link rel="stylesheet" type="text/css" href="CSS/AftalerOgKonsultation.css">
 
 
+
 <head>
+    <script src="Aftaler.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
             rel="stylesheet"
@@ -65,7 +67,7 @@
         <p>&nbsp;</p>
 
         <p class="Aftale-tekst" >Sundhedspersonale</p>
-        <form id="SPform"> <input class="Aftale-oprettelse" type="text" id="SP" name="name" required> </form>
+        <form id="SPform"> <input class="Aftale-oprettelse" type="text" id="SP" name="name dato startTidspunkt" required> </form>
 
     <p>&nbsp;</p>
 
@@ -97,7 +99,7 @@
 
     <input class="Aftaler-knapper" type="button" value="  Tilføj aftale  " onclick="AftaleOprettelse()">
     <input class="Aftaler-knapper" type="button" value="  Opdater  "onclick="
-    opretGiraf('aftale')
+
     opretGiraf('SPform')
     opretGiraf('Datoform')
     opretGiraf('Starttidform')
@@ -137,5 +139,5 @@
 </section>
 
 </body>
-<script src="Aftaler.js"></script>
+
 </html>
