--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,7 @@
             <img id="Avatar1" src="Bilag/791184_heart_512x512.png" class="avatar">
             <h1>Log in</h1>
             <form id="form">
-                <p>Brugernavn (test)</p>
+                <p>Brugernavn</p>
                 <!-- Pladsholder for username -->
                 <input type="text" id="InputBrugernavn" autocomplete="on">
                 <p>Kode</p>
